tests/snapshots/pipeline__quantumult-x.snap
---
source: tests/pipeline.rs
expression: text(QUANTUMULT_X)
---
# cn-mainland-ip: mainland China IP ranges derived from BGP routing data
# snapshot 2026-09-30T08:00:00Z from 1 collectors; NRO 2026-09-29; RPKI -
# 10 IPv4 and 1 IPv6 entries; license MIT
ip-cidr, 1.0.0.0/17, direct
ip-cidr, 1.0.129.0/24, direct
ip-cidr, 1.0.130.0/23, direct
ip-cidr, 1.0.132.0/22, direct
ip-cidr, 1.0.136.0/21, direct
ip-cidr, 1.0.144.0/20, direct
ip-cidr, 1.0.160.0/19, direct
ip-cidr, 1.0.192.0/18, direct
ip-cidr, 8.128.0.0/16, direct
ip-cidr, 42.0.0.0/16, direct
ip6-cidr, 240e::/20, direct
