tests/snapshots/pipeline__shadowrocket.snap
---
source: tests/pipeline.rs
expression: text(SHADOWROCKET)
---
# cn-mainland-ip: mainland China IP ranges derived from BGP routing data
# snapshot 2026-09-30T08:00:00Z from 1 collectors; NRO 2026-09-29; RPKI -
# 10 IPv4 and 1 IPv6 entries; license MIT
IP-CIDR,1.0.0.0/17
IP-CIDR,1.0.129.0/24
IP-CIDR,1.0.130.0/23
IP-CIDR,1.0.132.0/22
IP-CIDR,1.0.136.0/21
IP-CIDR,1.0.144.0/20
IP-CIDR,1.0.160.0/19
IP-CIDR,1.0.192.0/18
IP-CIDR,8.128.0.0/16
IP-CIDR,42.0.0.0/16
IP-CIDR,240e::/20
