tests/snapshots/pipeline__sing-box.snap
---
source: tests/pipeline.rs
expression: artifacts.file(SING_BOX).unwrap()
---
{
  "version": 1,
  "rules": [
    {
      "ip_cidr": [
        "1.0.0.0/17",
        "1.0.129.0/24",
        "1.0.130.0/23",
        "1.0.132.0/22",
        "1.0.136.0/21",
        "1.0.144.0/20",
        "1.0.160.0/19",
        "1.0.192.0/18",
        "8.128.0.0/16",
        "42.0.0.0/16",
        "240e::/20"
      ]
    }
  ]
}
